--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-github-calendar": "^5.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
@@ -25,7 +25,7 @@
     "@tailwindcss/postcss": "^4",
     "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
